# ditox

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION.md  LICENSE  MIGRATION.md  NOTICE  Options.md  PRD-customize.md  PRD.md  README.md  deny.toml  flake.nix  images.md  nix.md  result  standalone-cli-PRD.md  sync.md  task-1.md  task-2.md  task-3.md  task-4.md  task-5.md  test_win_d.ps1
.cargo/: audit.toml
.claude/commands/: task.md  update.md
.github/: dependabot.yml
.github/workflows/: ci.yml  debug-secrets.yml  nix.yml  publish-on-tag.yml  publish.yml  release.yml  security.yml  upload-assets.yml  version-sync.yml
contrib/scripts/: dev_local_add.sh  turso_user_version.sh
contrib/systemd/: README.md  ditox-prune.service  ditox-prune.timer.template  ditox-sync.service  ditox-sync.timer.template
contrib/windows/: clipd_task.xml
crates/ditox-cli/: Cargo.toml  README.md
crates/ditox-cli/src/: config.rs  copy_helpers.rs  doctor.rs  lazy_store.rs  main.rs  managed_daemon.rs  picker.rs  theme.rs  tray.rs  xfer.rs
crates/ditox-cli/tests/: cli_smoke.rs  common.rs  config_json.rs  delete_clear.rs  doctor.rs  export_import.rs  favorite_toggle.rs  info_text.rs  list_images_favorites.rs  list_limit.rs  migrate.rs  prune_age.rs  search.rs  tags.rs  thumbs.rs  tui_preview.rs
crates/ditox-cli/tests/fixtures/: tiny.png.b64
crates/ditox-clipd/: Cargo.toml  README.md
crates/ditox-clipd/src/: main.rs
crates/ditox-core/: Cargo.toml  README.md
crates/ditox-core/migrations/: 0001_init.sql  0002_fts.sql  0003_images_path.sql  0004_sync_cols.sql  0005_tags.sql  0006_last_used.sql  0007_recency_index.sql  0008_ts_nanos.sql
crates/ditox-core/src/: lib.rs
crates/ditox-core/tests/: core_sqlite.rs  migration_images.rs  prune_behavior.rs  recency_order.rs  sync_libsql.rs  tags_sqlite.rs
ditox-core/: Cargo.toml
ditox-core/src/: actions.rs  app.rs  clipboard.rs  collection.rs  config.rs  content_type.rs  db.rs  entry.rs  error.rs  lib.rs  stats.rs  watcher.rs
ditox-core/tests/: fts_test.rs  image_store.rs  search_benchmark.rs
ditox-gui/: Cargo.toml  build.rs
ditox-gui/installer/: License.rtf  setup.iss
ditox-gui/src/: app.rs  cli.rs  ipc.rs  ipc_bridge.rs  main.rs  startup.rs
ditox-tui/: Cargo.toml
ditox-tui/src/: cli.rs  keybindings.rs  main.rs
ditox-tui/src/ui/: confirm.rs  help.rs  layout.rs  list.rs  mod.rs  note_editor.rs  preview.rs  search.rs  snippets.rs  tabs.rs  theme.rs
ditox-tui/tests/: cli_image_store.rs
docs/: RELEASING.md  ROADMAP.md  features.md  shortcuts.md
docs/notes/: architecture.md  image-storage-verification.sh  image-storage.md  linux-gui-architecture.md  win-d-problem.md
docs/tasks/: TEMPLATE.md
docs/tasks/completed/: 001-core-tui-cli.md  002-cli-parity.md  003-tab-crash-ghostty.md  004-tui-ui-improvements.md  005-tui-pagination.md  006-feature-ideas-brainstorm.md  007-feature-bundle-implementation.md  008-tui-polish.md  009-delete-confirmation-tui.md  010-linux-gui.md  011-image-storage-bug.md  012-release-infra.md  013-floating-launcher-redesign.md
docs/tasks/in-progress/: 004-windows-installer-distribution.md  010-windows-11-support.md  gui-improvements.md
nix/: module.nix  package.nix
packaging/linux/: ditox-gui.desktop
scripts/: build-installer.ps1  install_maintenance_timers.sh  install_prune_timer.sh  install_sync_timer.sh  publish_crates.sh
tests/: cli_tests.rs  clipboard_tests.rs  db_tests.rs  entry_tests.rs  pagination_benchmark_tests.rs
tests/common/: mod.rs
