[workspace]
members = ["ditox-core", "ditox-tui", "ditox-gui"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/oxfell/ditox"
authors = ["Oxfell"]

[workspace.dependencies]
# Shared dependencies
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
hex = "0.4.3"
sha2 = "0.10.9"
uuid = { version = "1.19.0", features = ["v4"] }
directories = "6.0.0"
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "2.0.17"
nucleo-matcher = "0.3.1"
regex = "1.12.2"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
image = { version = "0.25.9", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
] }

# Platform-specific
wl-clipboard-rs = "0.9.2"
libc = "0.2.178"
arboard = "3.6.1"
sysinfo = "0.37.2"

# TUI-specific
ratatui = "0.29.0"
crossterm = "0.29.0"
ratatui-image = "8.0.2"
clap = { version = "4.5.53", features = ["derive"] }

# GUI-specific
iced = { version = "0.14.0", features = ["image", "tokio"] }
tray-icon = "0.21.2"
global-hotkey = "0.7.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync"] }

# Testing
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
