[workspace]
members = ["ditox-core", "ditox-tui", "ditox-gui"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/0xfell/ditox"
authors = ["0xfell"]

[workspace.dependencies]
# Shared dependencies
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
hex = "0.4.3"
sha2 = "0.11.0"
uuid = { version = "1.23.1", features = ["v4"] }
directories = "6.0.0"
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
nucleo-matcher = "0.3.1"
regex = "1.12.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
image = { version = "0.25.10", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
] }

# Platform-specific
wl-clipboard-rs = "0.9.3"
libc = "0.2.186"
arboard = "3.6.1"
sysinfo = "0.38.4"

# TUI-specific
ratatui = "0.30.0"
crossterm = "0.29.0"
# `chafa-dyn` (default) needs pkg-config + libchafa at build time. We only
# want chafa on Linux/Wayland — Windows can't use it anyway. The non-chafa
# protocols (kitty/sixel/iterm2/halfblocks) compile in unconditionally.
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm"] }
clap = { version = "4.6.1", features = ["derive"] }

# GUI-specific
iced = { version = "0.14.0", features = ["image", "tokio"] }
tray-icon = "0.22.1"
global-hotkey = "0.7.0"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "sync"] }

# Testing
assert_cmd = "2.2.1"
predicates = "3.1.4"
tempfile = "3.27.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
