[package]
name = "ditox-core"
description = "Core library for Ditox clipboard manager"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Database
rusqlite.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
hex.workspace = true

# Utilities
sha2.workspace = true
uuid.workspace = true
directories.workspace = true
chrono.workspace = true
thiserror.workspace = true
image.workspace = true

# Search
nucleo-matcher.workspace = true
regex.workspace = true

# Logging
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
wl-clipboard-rs.workspace = true
libc.workspace = true

[target.'cfg(windows)'.dependencies]
arboard.workspace = true
sysinfo.workspace = true

[dev-dependencies]
tempfile.workspace = true
