[package]
name = "ditox-gui"
description = "Windows GUI for Ditox clipboard manager"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "ditox-gui"
path = "src/main.rs"

[dependencies]
ditox-core = { path = "../ditox-core" }

# GUI framework
iced.workspace = true
iced_fonts = { version = "0.1", features = ["bootstrap"] }

# System integration
tray-icon.workspace = true
global-hotkey.workspace = true
tokio.workspace = true

# Shared
image.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
directories.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Console"] }
auto-launch = "0.5"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
