[package]
name = "ditox-tui"
description = "Terminal UI for Ditox clipboard manager"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ditox"
path = "src/main.rs"

[dependencies]
ditox-core = { path = "../ditox-core" }

# TUI
ratatui.workspace = true
crossterm.workspace = true
ratatui-image.workspace = true
image.workspace = true

# CLI
clap.workspace = true

# Serialization (for CLI JSON output)
serde_json.workspace = true

# Search (for CLI search command)
nucleo-matcher.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Linux-only: enable chafa for richer terminal-graphics fallback. Requires
# libchafa-dev at build time (provided by `nix develop` and the CI runner's
# apt install). Windows doesn't need this — its terminals don't speak the
# protocols chafa accelerates.
[target.'cfg(unix)'.dependencies]
ratatui-image = { workspace = true, features = ["chafa-dyn"] }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
