[package]
name = "ditox-cli"
version = "1.0.0"
edition = "2021"
description = "Ditox clipboard CLI"
license = "MIT OR Apache-2.0"

[features]
# Default build includes libsql so one binary supports both local + remote at runtime
default = ["libsql"]
libsql = ["ditox-core/libsql", "dep:libsql", "dep:tokio"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ditox-core = { version = "1.0.0", path = "../ditox-core", features = ["sqlite", "clipboard"] }
directories = "5"
time = { version = "0.3", features = ["formatting"] }
image = { version = "0.25", default-features = false, features = ["png","jpeg","gif","bmp","tiff","webp"] }
toml = "0.8"
whoami = "1"
shellexpand = "3"
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
libsql = { version = "0.3", optional = true }
ratatui = "0.27"
crossterm = "0.27"
fuzzy-matcher = "0.3"
sha2 = "0.10"
hex = "0.4"
once_cell = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = { workspace = true }
base64 = "0.22"
arboard = "3"
