[package]
name = "ditox-clipd"
version = "0.1.0"
edition = "2021"
description = "Ditox background daemon (clipd)"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread","macros","net","io-util","time","signal"] }
directories = "5"
ditox-core = { path = "../ditox-core", features = ["sqlite", "clipboard"] }
time = { version = "0.3", features = ["formatting"] }
toml = "0.8"
