[package]
name = "ditox-clipd"
version = "1.0.1"
edition = "2021"
description = "Ditox background daemon (clipd)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xfell/ditox"
homepage = "https://github.com/0xfell/ditox"
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread","macros","net","io-util","time","signal"] }
directories = "6"
ditox-core = { version = "1.0.1", path = "../ditox-core", features = ["sqlite", "clipboard"] }
time = { version = "0.3", features = ["formatting"] }
toml = "0.9"
