[package]
name = "ditox-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Ditox clipboard manager"
license = "MIT OR Apache-2.0"

[features]
default = ["mem-store", "clipboard"]
mem-store = []
sqlite = ["dep:rusqlite"]
clipboard = ["dep:arboard"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { version = "0.3", features = ["serde"] }
sha2 = "0.10"
include_dir = "0.7"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
tempfile = "3"
assert_matches = "1"

# Optional SQLite backend
[dependencies.rusqlite]
version = "0.31"
optional = true
features = ["bundled"]

[dependencies.arboard]
version = "3"
optional = true
