[package]
name = "ditox-core"
version = "1.0.1"
edition = "2021"
description = "Core library for Ditox clipboard manager"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xfell/ditox"
homepage = "https://github.com/0xfell/ditox"
readme = "README.md"

[features]
default = ["mem-store", "clipboard"]
mem-store = []
sqlite = ["dep:rusqlite"]
clipboard = ["dep:arboard"]
libsql = ["dep:libsql", "dep:tokio", "dep:whoami"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { version = "0.3", features = ["serde"] }
sha2 = "0.10"
include_dir = "0.7"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
libsql = { version = "0.3", optional = true }
whoami = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
assert_matches = "1"

# Optional SQLite backend
[dependencies.rusqlite]
version = "0.31"
optional = true
features = ["bundled"]

[dependencies.arboard]
version = "3"
optional = true
# Wayland clipboard support (Hyprland etc.) isn’t enabled by default in arboard.
# Enable it so clipd/CLI can read/write on Wayland compositors.
features = ["wayland-data-control"]
